--- a/values.yaml
+++ b/values.yaml
@@ -36,6 +36,19 @@ apps:
           - admin.password
           - server.secretkey
    
+  # Persistant Storage Local-Path Provosioner
+  - name: slow-storage
+    repoURL: https://github.com/rancher/local-path-provisioner
+    path: deploy/chart
+    syncWave: "0"
+    parameters:
+      - name: storageClass.name
+        value: slow
+      - name: nodePathMap[0].node
+        value: DEFAULT_PATH_FOR_NON_LISTED_NODES
+      - name: nodePathMap[0].paths[0]
+        value: /data/kubernetes/storage
+
   # Metal LoadBalancer
   - name: metallb
     repoURL: https://charts.bitnami.com/bitnami
