--- a/values.d/drone.yaml
+++ b/values.d/drone.yaml
@@ -1,25 +1,9 @@
-#image:
+image:
 #  repository: drone/drone
-#  tag: 1.9.0
+  tag: 1.10.0
 #  pullPolicy: IfNotPresent
 
-## If you need to pull images from a private Docker image repository, pass in the name
-## of a Kubernetes Secret that contains the needed secret. For more details, see:
-## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-##
-imagePullSecrets: []
-# - name: "image-pull-secret"
-
-nameOverride: ""
-fullnameOverride: ""
-
-# Drone server does not interact with the Kubernetes API server
-automountServiceAccountToken: false
-
-podSecurityContext: {}
-#  fsGroup: 2000
-
-securityContext: {}
+#securityContext:
 #  capabilities:
 #    drop:
 #    - ALL
@@ -33,8 +17,6 @@ securityContext: {}
 podAnnotations:
   prometheus.io/scrape: "true"
   prometheus.io/port: "80"
-
-updateStrategy: {}
 
 service:
   type: ClusterIP
@@ -55,107 +37,20 @@ ingress:
     hosts:
       - drone.dc
 
-resources: {}
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-## If you'd like to force the Drone server to run on a specific node or set of nodes,
-## set a selector here.
-##
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
-
-## If you'd like to make additional files or volumes available to Drone, declare additional
-## Volumes here per the Pod spec's "volumes" section.
-## Ref: https://kubernetes.io/docs/concepts/storage/volumes/
-##
-extraVolumes: []
-## If you have declared extra volumes, mount them here, per the Pod Container's
-## "volumeMounts" section.
-##
-extraVolumeMounts: []
+resources:
+  limits:
+    cpu: 4000m
+    memory: 1024Mi
 
 persistentVolume:
-  ## If you are using SQLite as your DB for Drone, it is recommended to enable persistence. If
-  ## enabled, the Chart will create a PersistentVolumeClaim to store its state in. If you are
-  ## using a DB other than SQLite, set this to false to avoid allocating unused storage.
-  ## If set to false, Drone will use an emptyDir instead, which is ephemeral.
-  ##
   enabled: true
-
-  ## Drone server data Persistent Volume access modes
-  ## Must match those of existing PV or dynamic provisioner
-  ## Ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
-  ##
-  accessModes:
-    - ReadWriteOnce
-
-  ## Drone server data Persistent Volume annotations
-  ##
-  annotations: {}
-
-  ## If you'd like to bring your own PVC for persisting Drone state, pass the name of the
-  ## created + ready PVC here. If set, this Chart will not create the default PVC.
-  ## Requires server.persistentVolume.enabled: true
-  ##
-  existingClaim: ""
-
-  ## Drone server data Persistent Volume mount root path
-  ##
-  mountPath: /data
-
-  ## Drone server data Persistent Volume size
-  ##
   size: 8Gi
 
-  ## Drone server data Persistent Volume Storage Class
-  ## If defined, storageClassName: <storageClass>
-  ## If set to "-", storageClassName: "", which disables dynamic provisioning
-  ## If undefined (the default) or set to null, no storageClassName spec is
-  ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
-  ##   GKE, AWS & OpenStack)
-  ##
   storageClass: ""
 
-  ## Drone server data Persistent Volume Binding Mode
-  ## If defined, volumeMode: <volumeMode>
-  ## If empty (the default) or set to null, no volumeBindingMode spec is
-  ## set, choosing the default mode.
-  ##
-  volumeMode: ""
-
-  ## Subdirectory of Drone server data Persistent Volume to mount
-  ## Useful if the volume's root directory is not empty
-  ##
-  subPath: ""
-
-## If persistentVolume.enabled is set to false, Drone will mount an emptyDir instead of
-## a PVC for any state that it needs to persist.
-##
-emptyDir:
-  ## Total space to request for the emptyDir. An empty value here means no limit.
-  sizeLimit: ""
-
-## If you'd like to provide your own Kubernetes Secret object instead of passing your values
-## in un-encrypted, pass in the name of a created + populated Secret in the same Namespace
-## as the Drone server. All secrets within this configmap will be mounted as environment
-## variables, with each key/value mapping to a corresponding environment variable on the
-## Drone server.
-##
 extraSecretNamesForEnvFrom:
  - drone-env
 
-## The keys within the "env" map are mounted as environment variables on the Drone server pod.
-## See the full reference of Drone server environment variables here:
-## Ref: https://docs.drone.io/installation/reference/
-##
 env:
   ## REQUIRED: Set the user-visible Drone hostname, sans protocol.
   ## Ref: https://docs.drone.io/installation/reference/drone-server-host/
