--- a/values.d/loki-stack.yaml
+++ b/values.d/loki-stack.yaml
@@ -48,6 +48,40 @@ grafana:
         gnetId: 11462
         revision: 1
 
+  # For OAUTH Secret Token
+  envFromSecret: grafana-env
+
+  grafana.ini:
+    paths:
+      data: /var/lib/grafana/data
+      logs: /var/log/grafana
+      plugins: /var/lib/grafana/plugins
+      provisioning: /etc/grafana/provisioning
+    analytics:
+      check_for_updates: false
+    log:
+      mode: console
+    grafana_net:
+      url: https://grafana.net
+    server:
+      root_url: https://grafana.dc
+
+    auth.generic_oauth:
+     name: Login Keycloak
+     enabled: true
+     allow_sign_up: true
+     client_id: grafana.dc
+     #client_secret = <replace-with-your-client-secret>
+     scopes: profile
+     email_attribute_name: email:primary
+     role_attribute_path: "contains(roles[*], 'admin') && 'Admin' || contains(roles[*], 'editor') && 'Editor' || 'Viewer'"
+     auth_url: https://keycloak.dc/auth/realms/LAN/protocol/openid-connect/auth
+     token_url: https://keycloak.dc/auth/realms/LAN/protocol/openid-connect/token
+     api_url: https://keycloak.dc/auth/realms/LAN/protocol/openid-connect/userinfo
+     # meh.. but for now...
+     tls_skip_verify_insecure: true
+ 
+
 prometheus:
   enabled: false
   image:
