--- a/values.d/argocd.yaml
+++ b/values.d/argocd.yaml
@@ -8,10 +8,10 @@ fullnameOverride: ""
 installCRDs: true
 
 global:
-  image:
-    repository: argoproj/argocd
-    tag: v2.0.0
-    imagePullPolicy: IfNotPresent
+#  image:
+#    repository: quay.io/argoproj/argocd
+#    tag: #v2.0.0
+#    imagePullPolicy: IfNotPresent
   securityContext:
     runAsUser: 999
     runAsGroup: 999
@@ -27,8 +27,8 @@ controller:
   name: application-controller
 
   image:
-    repository: # argoproj/argocd
-    tag: # v1.7.11
+    repository: # defaults to global.image.repository
+    tag: # defaults to global.image.tag
     imagePullPolicy: # IfNotPresent
 
   # If changing the number of replicas you must pass the number as ARGOCD_CONTROLLER_REPLICAS as an environment variable
@@ -199,10 +199,10 @@ dex:
     serviceMonitor:
       enabled: false
 
-  image:
-    repository: quay.io/dexidp/dex
-    tag: v2.26.0
-    imagePullPolicy: IfNotPresent
+#  image:
+#    repository: quay.io/dexidp/dex
+#    tag: #v2.26.0
+#    imagePullPolicy: IfNotPresent
   initImage:
     repository:
     tag:
@@ -275,10 +275,10 @@ redis:
   enabled: true
   name: redis
 
-  image:
-    repository: redis
-    tag: 5.0.10-alpine
-    imagePullPolicy: IfNotPresent
+#  image:
+#    repository: redis
+#    tag: #5.0.10-alpine
+#    imagePullPolicy: IfNotPresent
 
   containerPort: 6379
   servicePort: 6379
@@ -347,7 +347,7 @@ redis-ha:
     metrics:
       enabled: true
   image:
-    tag: 5.0.8-alpine
+#    tag: #5.0.8-alpine
 
 ## Server
 server:
@@ -362,10 +362,10 @@ server:
     targetCPUUtilizationPercentage: 50
     targetMemoryUtilizationPercentage: 50
 
-  image:
-    repository: # argoproj/argocd
-    tag: # v1.7.11
-    imagePullPolicy: # IfNotPresent
+#  image:
+#    repository: # argoproj/argocd
+#    tag: # v1.7.11
+#    imagePullPolicy: # IfNotPresent
 
   ## Additional command line arguments to pass to argocd-server
   ##
@@ -724,10 +724,10 @@ repoServer:
     targetCPUUtilizationPercentage: 50
     targetMemoryUtilizationPercentage: 50
 
-  image:
-    repository: # argoproj/argocd
-    tag: # v1.7.11
-    imagePullPolicy: # IfNotPresent
+#  image:
+#    repository: # argoproj/argocd
+#    tag: # v1.7.11
+#    imagePullPolicy: # IfNotPresent
 
   ## Additional command line arguments to pass to argocd-repo-server
   ##
