--- a/values.yaml
+++ b/values.yaml
@@ -144,8 +144,7 @@ apps:
   - name: loki-stack
     repoURL: https://grafana.github.io/helm-charts
     chart: loki-stack
-    noCreateNamespace: true
-    namespace: prometheus
+    existingNamespace: prometheus
     targetRevision: 2.3.1
     secrets:
       - name: loki-stack-grafana
