--- a/.drone.yml
+++ b/.drone.yml
@@ -11,4 +11,5 @@ steps:
    commands:
     - git remote add gh-token "https://$${GH_TOKEN}@github.com/nold360/heqet.git"
     - git fetch gh-token && git fetch gh-token gh-deploy:gh-deploy
-    - mkdocs gh-deploy --clean --remote-name gh-token;
+    - cp README.md docs/index.md
+    - mkdocs gh-deploy --clean --remote-name gh-token
