--- a/values.d/deluge.yaml
+++ b/values.d/deluge.yaml
@@ -3,6 +3,7 @@ ingress:
   annotations:
     cert-manager.io/cluster-issuer: "vault-issuer"
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  
   hosts:
     - host: torrent.dc
