--- a/values.yaml
+++ b/values.yaml
@@ -14,6 +14,23 @@ generators:
   # Vault Secret Injector
   vault: true
 
+  # Use predfined NetworkPolices in Apps/Namespaces
+  networkpolicy: true
+
+# Define your NetworkPolicies here
+networkpolicies:
+  # Allow DNS to all Namespaces, deny everything else
+  allow-dns:
+    podSelector: {}
+    policyTypes:
+    - Egress
+    egress:
+    - ports:
+      - port: 53
+        protocol: UDP
+      to:
+      - namespaceSelector: {}
+
 # App Definitions that will be managed in ArgoCD
 apps:
   # Heqet
