Update(loki-stack)

--- a/values.d/loki-stack.yaml
+++ b/values.d/loki-stack.yaml
@@ -1,6 +1,6 @@
 loki:
-  image:
-    tag: 2.2.1
+#  image:
+#    tag: 2.2.1
   enabled: true
 
 promtail:
@@ -33,8 +33,8 @@ grafana:
       enabled: true
       label: grafana_dashboard
 
-  image:
-    tag: 7.5.4
+#  image:
+#    tag: 7.5.4
 
   persistence:
     enabled: true
@@ -105,9 +105,9 @@ prometheus:
       #storage.local.retention: 720h
 
   nodeexporter:
-    image:
-      repository: quay.io/prometheus/node-exporter
-      tag: v1.1.2
+#    image:
+#      repository: quay.io/prometheus/node-exporter
+#      tag: v1.1.2
     
     extraHostPathMounts:
      - name: textfile-dir
