--- a/values.d/vault.yaml
+++ b/values.d/vault.yaml
@@ -37,8 +37,8 @@ injector:
   leaderElector:
     enabled: true
     image:
-      repository: "gcr.io/google_containers/leader-elector"
-      tag: "0.4"
+      #repository: "gcr.io/google_containers/leader-elector"
+      #tag: "0.4"
     ttl: 60s
 
   # If true, will enable a node exporter metrics endpoint at /metrics.
@@ -51,16 +51,16 @@ injector:
 
   # image sets the repo and tag of the vault-k8s image to use for the injector.
   image:
-    repository: "hashicorp/vault-k8s"
-    tag: "0.9.0"
+    #repository: "hashicorp/vault-k8s"
+    #tag: "0.9.0"
     pullPolicy: IfNotPresent
 
   # agentImage sets the repo and tag of the Vault image to use for the Vault Agent
   # containers.  This should be set to the official Vault image.  Vault 1.3.1+ is
   # required.
   agentImage:
-    repository: "vault"
-    tag: "1.7.0"
+    #repository: "vault"
+    #tag: "1.7.0"
 
   # The default values for the injected Vault Agent containers.
   agentDefaults:
@@ -203,8 +203,8 @@ server:
   # By default no direct resource request is made.
 
   image:
-    repository: "vault"
-    tag: "1.7.0"
+    #repository: "vault"
+    #tag: "1.7.0"
     # Overrides the default Image Pull Policy
     pullPolicy: IfNotPresent
 
@@ -691,8 +691,8 @@ csi:
   enabled: false
 
   image:
-    repository: "hashicorp/vault-csi-provider"
-    tag: "0.1.0"
+    #repository: "hashicorp/vault-csi-provider"
+    #tag: "0.1.0"
     pullPolicy: IfNotPresent
 
   # volumes is a list of volumes made available to all containers. These are rendered
