--- a/values.d/nextcloud.yaml
+++ b/values.d/nextcloud.yaml
@@ -7,6 +7,13 @@ nextcloud:
       value: http://squid.proxy.svc.cluster.local:80
     - name: NO_PROXY
       value: .cluster.local
+  existingSecret:
+    enabled: true
+    secretName: nextcloud-user
+    usernameKey: username
+    passwordKey: password
+    smtpUsernameKey: smtp_username
+    smtpPasswordKey: smtp_password
   configs:
     proxy.config.php: |-
       <?php
