--- a/values.d/drone.yaml
+++ b/values.d/drone.yaml
@@ -3,17 +3,16 @@ image:
   tag: 2.0.4
 #  pullPolicy: IfNotPresent
 
-#securityContext:
-#  capabilities:
-#    drop:
-#    - ALL
-#  readOnlyRootFilesystem: true
-#  runAsNonRoot: true
-#  runAsUser: 1000
+containerPort: 8000
 
-## Add extra annotations to the Drone server pods here. See below example for
-## Prometheus scrape annotations.
-##
+securityContext:
+  capabilities:
+    drop:
+    - ALL
+  readOnlyRootFilesystem: true
+  runAsNonRoot: true
+  runAsUser: 1000
+
 podAnnotations:
   prometheus.io/scrape: "true"
   prometheus.io/port: "80"
@@ -25,17 +24,17 @@ service:
 ingress:
   enabled: true
   annotations:
-    cert-manager.io/cluster-issuer: vault-issuer
-    kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    cert-manager.io/cluster-issuer: letsencrypt
+    kubernetes.io/ingress.class: external
+    kubernetes.io/tls-acme: "true"
   hosts:
-    - host: drone.dc
+    - host: drone.nold.in
       paths:
         - "/"
   tls:
   - secretName: drone-tls
     hosts:
-      - drone.dc
+      - drone.nold.in
 
 resources:
   limits:
@@ -52,14 +51,22 @@ extraSecretNamesForEnvFrom:
  - drone-env
 
 env:
+  DRONE_USER_FILTER: nold,nold360
+  DRONE_SERVER_PORT: ":8000"
+ 
+  HTTP_PROXY: http://squid.proxy.svc.cluster.local
+  HTTPS_PROXY: http://squid.proxy.svc.cluster.local
+  NO_PROXY: localhost,.cluster.local
+
   ## REQUIRED: Set the user-visible Drone hostname, sans protocol.
   ## Ref: https://docs.drone.io/installation/reference/drone-server-host/
   ##
-  DRONE_SERVER_HOST: "drone.dc"
+  DRONE_SERVER_HOST: "drone.nold.in"
+
   ## The protocol to pair with the value in DRONE_SERVER_HOST (http or https).
   ## Ref: https://docs.drone.io/installation/reference/drone-server-proto/
   ##
-  DRONE_SERVER_PROTO: https
+  DRONE_SERVER_PROTO: http
 
   DRONE_STARLARK_ENABLED: "true"
   ## REQUIRED: Set the secret secret token that the Drone server and its Runners will use
