change(pihole): Use LoadBalancer instead of HostPort

--- a/values.d/ingress-internal.yaml
+++ b/values.d/ingress-internal.yaml
@@ -5,6 +5,7 @@ controller:
   service:
     annotations:
       metallb.universe.tf/address-pool: internal
+      metallb.universe.tf/allow-shared-ip: pihole
   metrics:
     enabled: true
     service:
